@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2019 Gregorius Techneticies
+ * Copyright (c) 2020 GregTech6-Unofficial Team
  *
  * This file is part of GregTech.
  *
@@ -46,8 +46,11 @@ import net.minecraft.block.Block;
 import net.minecraft.block.BlockRailBase;
 import net.minecraft.command.IEntitySelector;
 import net.minecraft.entity.Entity;
+import net.minecraft.entity.monster.EntitySnowman;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.inventory.IInventory;
+import net.minecraft.init.Blocks;
+import net.minecraft.init.Items;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.tileentity.TileEntity;
@@ -157,22 +160,38 @@ public class MultiTileEntityQueueHopper extends TileEntityBase09FacingSingle imp
 						int tMoved = ST.move(delegator(mFacing), tDelegator, null, F, F, F, T, mMode, 1, mMode-tMovedItems, 1);
 						if (tMoved <= 0) break;
 						tMovedItems += tMoved;
+					
 					}
 				}
 				DelegatorTileEntity tDelegator = getAdjacentTileEntity(SIDE_TOP);
-				if (tDelegator.getBlock() instanceof BlockRailBase) {
-					List tList = worldObj.getEntitiesWithinAABBExcludingEntity(null, tDelegator.box(0, 0, 0, 1, 1, 1), IEntitySelector.selectInventories);
-					if (tList != null && !tList.isEmpty()) tDelegator = new DelegatorTileEntity<>((IInventory)tList.get(0), tDelegator);
-				}
-				if (tDelegator.mTileEntity != null && !(tDelegator.mTileEntity instanceof MultiTileEntityAnvil)) {
-					tMovedItems += ST.move(tDelegator, delegator(SIDE_TOP));
+				Block tBlock = tDelegator.getBlock();
+				if (tBlock == Blocks.snow_layer) {
+					List tList = worldObj.getEntitiesWithinAABB(EntitySnowman.class, tDelegator.box(0, 1, 0, 1, 2, 1));
+					if (tList != null && !tList.isEmpty()) {
+						int i = getSizeInventory();
+						while (i-->0) if (!slotHas(i)) {
+							slot(i, ST.make(Items.snowball, 16, 0));
+							tMovedItems += 16;
+							updateInventory();
+							break;
+						}
+					}
 				} else {
-					if (!WD.visOpq(tDelegator.getWorld(), tDelegator.getX(), tDelegator.getY(), tDelegator.getZ(), F, T)) {
-						if (!slotHas(0)) {
-							slot(0, WD.suck(tDelegator));
-							if (slotHas(0)) {
-								tMovedItems += slot(0).stackSize;
-								updateInventory();
+					if (tBlock instanceof BlockRailBase) {
+						List tList = worldObj.getEntitiesWithinAABBExcludingEntity(null, tDelegator.box(0, 0, 0, 1, 1, 1), IEntitySelector.selectInventories);
+						if (tList != null && !tList.isEmpty()) tDelegator = new DelegatorTileEntity<>((IInventory)tList.get(0), tDelegator);
+					}
+					if (tDelegator.mTileEntity != null && !(tDelegator.mTileEntity instanceof MultiTileEntityAnvil)) {
+						tMovedItems += ST.move(tDelegator, delegator(SIDE_TOP));
+					} else {
+						if (!WD.visOpq(tDelegator.getWorld(), tDelegator.getX(), tDelegator.getY(), tDelegator.getZ(), F, T)) {
+							int i = getSizeInventory()-1;
+							if (!slotHas(i)) {
+								slot(i, WD.suck(tDelegator));
+								if (slotHas(i)) {
+									tMovedItems += slot(i).stackSize;
+									updateInventory();
+								}
 							}
 						}
 					}
